fixed conflict on search route
